--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "alexa-sdk": "1.0.25"
+    "@types/colors": "1.2.1",
+    "alexa-sdk": "1.0.25",
+    "colors": "1.2.4"
   },
   "devDependencies": {
     "@types/express": "^4.11.1",
